[package]
name = "bitman"
description = "Bit manipulation library for integral types"
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/keyboardsmoke/bitman"
homepage = "https://github.com/keyboardsmoke/bitman"
readme = "README.md"
keywords = ["bit", "bits", "manipulation", "bitwise"]
categories = ["data-structures"]
exclude = [".github/", ".git/", "target/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"